Finally i overflow hidden the conatiner. Because his delet doesn't fix the display of mobile screen

--- a/index.css
+++ b/index.css
@@ -40,7 +40,8 @@ h1, h2, h3, h4, h5, h6 {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1.7fr;
-    font-family: var(--font-family-text), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif
+    font-family: var(--font-family-text), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    overflow: hidden;
 }
 
 .content{
